--- a/GreenPlatform/src/main/resources/static/style/web/webStyle.css
+++ b/GreenPlatform/src/main/resources/static/style/web/webStyle.css
@@ -281,7 +281,8 @@ header{
 
 /*种子商店begin*/
 .market-title{
-    padding:15px;
+    margin: 0;
+    padding:25px;
     background: #419641;
     color: #ffffff;
 }
@@ -449,7 +450,7 @@ header{
         font-size: 18px;
     }
     #market #cSpms{
-        height: 50px;
+        height: 120px;
         font-size: 12px;
     }
     #market #nSpjg{
