--- a/GreenPlatform/src/main/resources/templates/login/login.html
+++ b/GreenPlatform/src/main/resources/templates/login/login.html
@@ -26,7 +26,7 @@
                         <div class="form-horizontal" id="loginForm">
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <input type="text" class="form-control input-lg" id="cLoginname" name="cLoginname" placeholder="请输入用户名">
+                                    <input type="text" class="form-control input-lg" id="cLoginname" name="cLoginname" placeholder="请输入用户名/电话号码">
                                 </div>
                             </div>
                             <div class="row">
