--- a/GreenPlatform/src/main/resources/templates/index.html
+++ b/GreenPlatform/src/main/resources/templates/index.html
@@ -101,7 +101,7 @@
             </div>
             <div class="row goldDzRankContent" th:each="tGreenGoldDzhzList,tGreenGoldDzhzStatu : ${loginuserHome.tGreenGoldDzhzList}">
                 <div class="col-md-4 col-xs-3" th:text=${tGreenGoldDzhzStatu.index+1} th:attr="id = 'goldDzRankContent_'+${tGreenGoldDzhzStatu.index+1}"></div>
-                <div class="col-md-4 col-xs-4" th:text="${tGreenGoldDzhzList.cUsername}"></div>
+                <div class="col-md-4 col-xs-4" th:text="${#strings.substring(tGreenGoldDzhzList.cUsername,0,1) + '**'}"></div>
                 <div class="col-md-4 col-xs-5" th:text="${'M '+tGreenGoldDzhzList.nDzzl}"></div>
             </div>
         </div>
@@ -123,7 +123,7 @@
             </div>
             <div class="row goldDzRankContent" th:each="tGreenNlNlhz,tGreenNlNlhzStatu : ${loginuserHome.tGreenNlNlhzList}">
                 <div class="col-md-4 col-xs-3" th:text=${tGreenNlNlhzStatu.index+1} th:attr="id = 'goldDzRankContent_'+${tGreenNlNlhzStatu.index+1}"></div>
-                <div class="col-md-4 col-xs-4" th:text=${tGreenNlNlhz.cUsername}></div>
+                <div class="col-md-4 col-xs-4" th:text="${#strings.substring(tGreenNlNlhz.cUsername,0,1) + '**'}"></div>
                 <div class="col-md-4 col-xs-5" th:text="${'￥'+tGreenNlNlhz.nNlhz}"></div>
             </div>
         </div>
