--- a/GreenPlatform/src/main/resources/templates/index.html
+++ b/GreenPlatform/src/main/resources/templates/index.html
@@ -83,7 +83,7 @@
         <div class="goldListWrap">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="text-center goldListTitle">金币点赞排行榜</h3>
+                    <h3 class="text-center goldListTitle">金币点赞排行榜TOP10</h3>
                 </div>
             </div>
             <div class="row">
@@ -113,7 +113,7 @@
         <div class="goldListWrap">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="text-center goldListTitle">能量排行榜</h3>
+                    <h3 class="text-center goldListTitle">能量排行榜TOP10</h3>
                 </div>
             </div>
             <div class="row goldDzRankTitle">
