--- a/GreenPlatform/src/main/resources/templates/web/index.html
+++ b/GreenPlatform/src/main/resources/templates/web/index.html
@@ -84,7 +84,7 @@
         <div class="goldListWrap">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="text-center goldListTitle">金币点赞排行榜</h3>
+                    <h3 class="text-center goldListTitle">金币点赞排行榜TOP10</h3>
                 </div>
             </div>
             <div class="row">
@@ -119,7 +119,7 @@
         <div class="goldListWrap">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="text-center goldListTitle">能量排行榜</h3>
+                    <h3 class="text-center goldListTitle">能量排行榜TOP10</h3>
                 </div>
             </div>
             <div class="row goldDzRankTitle">
@@ -230,13 +230,13 @@
                                     <button class="btn btn-info btn-sm" id="btnTx">提现</button>
                                 </li>
                                 <li class="list-group-item">
-                                    <a href="/base/history" target="">捐赠记录</a>
+                                    <a href="/base/history?type=1" target="">捐赠记录</a>
                                 </li>
                                 <li class="list-group-item">
-                                    <a href="/base/history" target="">充值记录</a>
+                                    <a href="/base/history?type=2" target="">充值记录</a>
                                 </li>
                                 <li class="list-group-item">
-                                    <a href="/base/history" target="">提现记录</a>
+                                    <a href="/base/history?type=3" target="">提现记录</a>
                                 </li>
                             </ul>
                         </div>
